<resources>
    <string name="app_name">MyOrders</string>
    <string name="app_name2">Refund</string>
    <string name="search">Search</string>
    <string name="lbl1">Mobile Phone Cover</string>
    <string name="lbl2">Item Price</string>
    <string name="lbl3">Order Date</string>
    <string name="btn1">Confirm Order Received</string>
    <string name="btn2">Request Refund</string>
    <string name="lbl4">Mobile Phone Cover</string>

    <string name="hint1">Enter the Reason</string>
    <string name="hint2">Enter the Description</string>
    <string name="hint3">Enter the Amount</string>
    <string name="rlbl1">Reason</string>
    <string name="rlbl2">Description</string>
    <string name="rlbl3">Type</string>
    <string name="rlbl4">Upload Image</string>
    <string name="rlbl5">Description</string>
    <string name="rlbl6">Type</string>
    <string name="rlink">C:destop/newfolder/picture1.jpeg</string>
    <string name="ramount">Maximum amount is : Rs52.50</string>
    <string name="rsize">Maximum size is 2MB</string>
    <string name="rbtn1">SUBMIT</string>
    <string name="radio1">Full Refund</string>
    <string name="radio2">Partial Refund</string>
    <string name="click">Add image</string>
    <string name="rUpdtbtn1">update</string>

    <string name="updateRtxt1">Item Damaged</string>
    <string name="updateRtxt2">When the package recieve it was damaged</string>
    <string name="sfv">update</string>
    <string name="title_activity_view_refund_details">viewRefundDetails</string>
    <string name="title_activity_view_details">viewDetails</string>


    <string name="view1">Item Damaged</string>
    <string name="view2">When the package recieve it was damaged</string>
    <string name="view3">Full Refund</string>
    <string name="view4">C:destop/newfolder/picture1.jpeg</string>
    <string name="view5">Refund Status</string>
    <string name="view6">Progress</string>
    <string name="view7">Admin Note</string>
    <string name="view8">Waiting for refund</string>
    <string name="viewbtn1">Update</string>
    <string name="viewbtn2">Delete</string>


    <string name="name">Name</string>
    <string name="adline1">Address Line 1</string>
    <string name="adline2">Address Line 2</string>
    <string name="pcode">Postale Code</string>
    <string name="cno">Contact Number</string>
    <string name="email">Email</string>
    <string name="omsg">Optional Message</string>


    <string name="title_activity_item_view">ItemView</string>
    <string name="title_activity_category_page">CategoryPage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="dname">Name</string>
    <string name="dprice">Price</string>
    <string name="dsubprice">SubPrice</string>
    <string name="ddescription">Description</string>
    <string name="dqun">Quntity</string>



</resources>
